# autocompose

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  build-release.sh
.github/: dependabot.yml
docs/: CROSS_COMPILATION.md  README.md  SUMMARY.md
docs/v1.0/de/: README.md
docs/v1.0/en/: README.md
docs/v1.0/es/: README.md
docs/v1.0/fr/: README.md
docs/v1.5/de/: README.md
docs/v1.5/en/: README.md
docs/v1.5/es/: README.md
docs/v1.5/fr/: CLI_DISCREPANCIES.md  IMPLEMENTATION_REPORT.md  README.md
src/: cli.rs  constants.rs  docker.rs  lib.rs  main.rs  podman.rs  security.rs  validation.rs
tests/: cli_integration_tests.rs  depends_on_tests.rs  docker_connection_tests.rs  docker_tests.rs  edge_cases_tests.rs  integration_tests.rs  podman_tests.rs  processing_options_tests.rs  regression_tests.rs  security_tests.rs
