[package]
name = "docker-autocompose"
version = "1.0.0"
authors = ["Romain Leonard"]
edition = "2021"


[[bin]]
name = "docker-autocompose"
version = "1.0.0"
authors = ["Romain Leonard"]
edition = "2021"
test = false
bench = false
path = "src/bin/docker.rs"


[[bin]]
name = "podman-autocompose"
version = "1.0.0"
authors = ["Romain Leonard"]
edition = "2021"
test = false
bench = false
path = "src/bin/podman.rs"

[dependencies]
bollard = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"

